unpackaged/main/default/objects/Fellow_App_Wave__mdt/Fellow_App_Wave__mdt.object-meta.xml
<CustomObject>
    <description>For managing fellow application wave deadlines</description>
    <label>Fellow App Wave</label>
    <pluralLabel>Fellow App Waves</pluralLabel>
</CustomObject>