unpackaged/main/default/objects/Fellow_App_Wave__mdt/fields/Deadline__c.field-meta.xml
<CustomField>
    <fullName>Deadline__c</fullName>
    <inlineHelpText>Wave deadline</inlineHelpText>
    <label>Deadline</label>
    <type>Date</type>
</CustomField>