unpackaged/main/default/objects/Fellow_App_Wave__mdt/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <inlineHelpText>fellowship program</inlineHelpText>
    <label>Program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>China Fellowship</fullName>
            </value>
            <value>
                <fullName>India Fellowship</fullName>
            </value>
            <value>
                <fullName>U.S. Fellowship</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>