unpackaged/main/default/objects/Fellow_App_Wave__mdt/fields/Wave__c.field-meta.xml
<CustomField>
    <fullName>Wave__c</fullName>
    <label>Wave</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wave 1</fullName>
                <default>true</default>
                <label>Wave 1</label>
            </value>
            <value>
                <fullName>Wave 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>