unpackaged/main/default/objects/Fellow_App_Wave__mdt/listViews/All_more_fields.listView-meta.xml
<ListView>
    <fullName>All_more_fields</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Deadline__c</columns>
    <columns>Program__c</columns>
    <columns>Wave__c</columns>
    <columns>NamespacePrefix</columns>
    <filterScope>Everything</filterScope>
    <label>All (more fields)</label>
    <language>en_US</language>
</ListView>